# bulls-and-cows

./: .travis.yml  CMakeLists.txt  README.md
src/: Bulls_and_cows.cpp  Bulls_and_cows.h  main.cpp
test/: Bulls_and_cows_test.cpp  Bulls_and_cows_test.h  main_test.cpp
